package oodv4;

public class Client {
    public void main(String[] args) {}
    public Bot setupBot() { return null; }
}
