package oodv4;

public class VoiceMessage {
    public String speakerId;
    public String content;
}
